--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,5 +1,49 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
 
+.ql-editor {
+    line-height: 0;
+    margin-bottom: 50px;
+    padding: 0;
+    min-height: 100px;
+    height: auto;
+    max-height: none;
+    overflow-y: visible;
+}
+
+.ql-editor p,
+.ql-editor li,
+.ql-editor h1,
+.ql-editor h2,
+.ql-editor h3,
+.ql-editor h4,
+.ql-editor h5,
+.ql-editor h6 {
+    line-height: 1.5;
+}
+
+.ql-editor p {
+    margin: 1rem 0;
+}
+
+.ql-editor img {
+    max-width: 100%;
+    height: 500px;
+    display: block;
+    object-fit: contain;
+    border-radius: 5px;
+    margin: 1rem auto;
+}
+
+.ql-video {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16 / 9;
+    border: none;
+    display: block;
+    margin: 1rem 0;
+    max-width: 100%;
+}
+
 body {
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
@@ -130,17 +174,13 @@ input.form-control:focus {
     justify-content: end;
 }
 
-.category-badge {
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
+.hover-card {
+    transition: background-color 0.3s ease
 }
 
-.author-info img {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    margin-right: 0.5rem;
+.hover-card:hover {
+    background-color: #e9ecef;
+    cursor: pointer;
 }
 
 .card-img-main {
@@ -151,9 +191,21 @@ input.form-control:focus {
     height: 241px;
 }
 
-.card-img-post{
+.card-img-post {
     height: 250px;
     width: 300px;
+}
+
+.card-popular-img {
+    width: 60px;
+    height: 60px;
+}
+
+.author-info img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 0.5rem;
 }
 
 .category-item {
@@ -161,6 +213,7 @@ input.form-control:focus {
     align-items: center;
     padding: 10px;
     margin-top: 5px;
+    transition: 0.3s ease;
     cursor: pointer;
 }
 
