--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -26,12 +26,11 @@
 }
 
 .ql-editor img {
-    max-width: 100%;
+    width: 100%;
     height: 500px;
+    border-radius: 0.375rem;
+    object-fit: cover;
     display: block;
-    object-fit: contain;
-    border-radius: 5px;
-    margin: 1rem auto;
 }
 
 .ql-video {
